BAAT-14041 sudo not installed on AMI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,8 @@ basic_docker_build: &basic_docker_build
     dockerfile=Dockerfile
     echo "FROM alpine:latest" > $dockerfile
     echo "RUN echo hello" >> $dockerfile
-    sudo docker build -f $dockerfile --tag throwaway:$CIRCLE_BUILD_NUM .
-    sudo docker run --rm throwaway:$CIRCLE_BUILD_NUM 
+    docker build -f $dockerfile --tag throwaway:$CIRCLE_BUILD_NUM .
+    docker run --rm throwaway:$CIRCLE_BUILD_NUM 
 
 jobs:
   small:
