--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ basic_docker_build: &basic_docker_build
     echo "RUN apk add curl" >> $dockerfile
     echo "RUN curl https://npmjs.org" >> $dockerfile
     echo "RUN curl https://artifactory.nike.com; curl -o newrelic.jar https://artifactory.nike.com/eap-newrelic/newrelic-java-3.38.0.zip" >> $dockerfile
-    echo "RUN wget https://github.com/segmentio/chamber/releases/download/v2.2.0/chamber-v2.2.0-linux-amd64" >> $dockerfile
+    echo "RUN curl -o chamber-v2 https://github.com/segmentio/chamber/releases/download/v2.2.0/chamber-v2.2.0-linux-amd64" >> $dockerfile
     docker build -f $dockerfile --tag throwaway:$CIRCLE_BUILD_NUM .
     docker run --rm throwaway:$CIRCLE_BUILD_NUM 
 
