--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,9 +46,9 @@ basic_docker_build: &basic_docker_build
   name: "Build a really basic docker image"
   command: |
     dockerfile=Dockerfile
-    FROM centos:centos7
-    RUN yum -y update
-    RUN yum -y install httpd
+    echo "FROM centos:centos7" > $dockerfile
+    echo "RUN yum -y update" > $dockerfile
+    echo "RUN yum -y install httpd" > $dockerfile
     docker build -f $dockerfile --tag throwaway:$CIRCLE_BUILD_NUM .
     docker run --rm throwaway:$CIRCLE_BUILD_NUM 
 
