--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ basic_docker_build: &basic_docker_build
   name: "Build a really basic docker image"
   command: |
     dockerfile=Dockerfile
-    echo "FROM rabbitmq:latest" > $dockerfile
-    echo "RUN uname -a" >> $dockerfile
+    echo "FROM hashicorp/terraform" > $dockerfile
+    echo "RUN apk --no-cache add jq git bash sed && apk --purge -v del py-pip && rm /var/cache/apk/*" >> $dockerfile
     docker build -f $dockerfile --tag throwaway:$CIRCLE_BUILD_NUM .
     docker run --rm throwaway:$CIRCLE_BUILD_NUM 
 
